adding getCommands, getExperiments endpoints + updating openapi docs
